templates/openedge-pasoe.template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
   PAS for OpenEdge infrastructure with Auto Scaling
Parameters:
  PASOEDeployPackage:
    Description: URL to package to deploy databases into PASOE EC2 instances
    Type: String
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t3a.small
    AllowedValues:
      - t3a.small`
      - t3a.medium
      - t3a.large
      - t3a.xlarge
      - t3a.2xlarge
    ConstraintDescription: must be a valid EC2 instance type.
  EmailAddress:
    Description: Email Address for notification
    Type: String
    AllowedPattern: >-
      ([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)
    ConstraintDescription: Must be a valid email id.
  KeyPairName:
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: Name of an existing EC2 KeyPair.
  WebAccessCIDR:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
    Description: Allowed CIDR block for  webserver access
    Type: String
  PrivateSubnet1ID:
    Description: Private Subnet Id 1
    Type: 'AWS::EC2::Subnet::Id'
  PrivateSubnet2ID:
    Description: Private Subnet Id 2
    Type: 'AWS::EC2::Subnet::Id'
  PublicSubnet1ID:
    Description: Public Subnet Id 1
    Type: 'AWS::EC2::Subnet::Id'
  PublicSubnet2ID:
    Description: Public Subnet Id 2
    Type: 'AWS::EC2::Subnet::Id'
  VPCID:
    Description: 'ID of the VPC (e.g., vpc-0343606e)'
    Type: 'AWS::EC2::VPC::Id'
  DBHostName:
    Description: IP Address of SourceReplica Instance
    Type: String
  DBHostName1:
    Description: IP Address of SourceReplica Instance
    Type: String
  DBHostName2:
    Description: IP Address of SourceReplica Instance
    Type: String
  MinScalingInstances:
    Description: Minimum number of EC2 instances in ASG
    Type: String
  MaxScalingInstances:
    Description: Maximum number of EC2 instances in ASG
    Type: String
Mappings:
  AWSAMIRegionMap:
    AMI:
      PASOEAMZNLINUX2: Amazon Linux 2 AMI with PAS for OpenEdge
    af-south-1:
      PASOEAMZNLINUX2: ami-0cf7df69b9c8982eb
    ap-east-1:
      PASOEAMZNLINUX2: ami-0ce220964bcaef06b
    ap-northeast-1:
      PASOEAMZNLINUX2: ami-0f68d1fd7936fbf5a
    ap-northeast-2:
      PASOEAMZNLINUX2: ami-099c57553e27a9d1a
    ap-south-1:
      PASOEAMZNLINUX2: ami-0c94f3a94b9618c02
    ap-southeast-1:
      PASOEAMZNLINUX2: ami-0ba9c5af5782a50c6
    ap-southeast-2:
      PASOEAMZNLINUX2: ami-091d949407dd512db
    ca-central-1:
      PASOEAMZNLINUX2: ami-0294237ea18275104
    eu-central-1:
      PASOEAMZNLINUX2: ami-0ae4d65c8875a4493
    eu-north-1:
      PASOEAMZNLINUX2: ami-0a66e4b469a9a5584
    eu-south-1:
      PASOEAMZNLINUX2: ami-0d9db71f6144b1aaf
    eu-west-1:
      PASOEAMZNLINUX2: ami-04876ea318f5d645e
    eu-west-2:
      PASOEAMZNLINUX2: ami-0debbd89379757bf3
    eu-west-3:
      PASOEAMZNLINUX2: ami-0f66787bca381850f
    sa-east-1:
      PASOEAMZNLINUX2: ami-02d1277146ba0195b
    us-east-1:
      PASOEAMZNLINUX2: ami-079b0ffcb6bab5e97
    us-east-2:
      PASOEAMZNLINUX2: ami-0b3480f434dc86c60
    us-west-1:
      PASOEAMZNLINUX2: ami-0f198231121d3bfb2
    us-west-2:
      PASOEAMZNLINUX2: ami-0df7ac3355c904107
Resources:
  NotificationTopic:
    Type: 'AWS::SNS::Topic'
    Properties:
      Subscription:
        - Endpoint: !Ref EmailAddress
          Protocol: email
  S3AccessRole:
    Type: "AWS::IAM::Role"
    Properties:
      Path: "/"
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - 'ec2.amazonaws.com'
          Action: sts:AssumeRole
  S3AccessRolePolicy:
    Type: "AWS::IAM::Policy"
    Properties:
      PolicyName: S3AccessRolePolicy
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Effect: Allow
          Action:
          - s3:Get*
          - s3:List*
          - s3:AbortMultipartUpload
          Resource:
          - '*'
      Roles:
        - Ref: S3AccessRole
  S3AccessProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Path: /
      Roles:
        - !Ref S3AccessRole
  PASOEGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      VPCZoneIdentifier:
        - !Ref PrivateSubnet1ID
        - !Ref PrivateSubnet2ID
      LaunchConfigurationName: !Ref PASOELaunchConfig
      MinSize: !Ref MinScalingInstances
      MaxSize: !Ref MaxScalingInstances
      TargetGroupARNs:
        - !Ref PASOETargetGroup
      NotificationConfigurations:
      - TopicARN: !Ref NotificationTopic
        NotificationTypes:
          - autoscaling:EC2_INSTANCE_LAUNCH
          - autoscaling:EC2_INSTANCE_LAUNCH_ERROR
          - autoscaling:EC2_INSTANCE_TERMINATE
          - autoscaling:EC2_INSTANCE_TERMINATE_ERROR
      Tags:
        - Key: Name
          Value: pasoe
          PropagateAtLaunch: true
    CreationPolicy:
      ResourceSignal:
        Timeout: PT15M
        Count: '1'
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MinInstancesInService: 1
        MaxBatchSize: 1
        PauseTime: PT15M
        WaitOnResourceSignals: true
  PASOELaunchConfig:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Metadata:
      "AWS::CloudFormation::Init":
        config:
          awscli:
            commands:
              00_set_default_s3_signature_version:
                command: aws configure set default.s3.signature_version s3v4
              01_set_default_region:
                command: !Sub "aws configure set default.region '${AWS::Region}'"
          files:
            "/install/app.tar.gz":
              source: !Sub "${PASOEDeployPackage}"
              mode: '000755'
              owner: ec2-user
              group: ec2-user
              authentication: S3AccessCreds
      'AWS::CloudFormation::Authentication':
        S3AccessCreds:
          type: S3
          roleName: !Ref S3AccessRole
    Properties:
      IamInstanceProfile: !Ref S3AccessProfile
      KeyName: !Ref KeyPairName
      ImageId: !FindInMap 
        - AWSAMIRegionMap
        - !Ref 'AWS::Region'
        - PASOEAMZNLINUX2
      InstanceType: !Ref InstanceType
      SecurityGroups:
        - !Ref PASOESecurityGroup
      UserData: !Base64
        'Fn::Sub':
          - >
            #!/bin/bash -x

            # Install PASOE app

            mkdir -p /install

            export OE_ENV=pasoe

            export DBHostName=${DBHostName}

            export DBHostName1=${DBHostName1}

            export DBHostName2=${DBHostName2}

            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource PASOELaunchConfig --region ${AWS::Region}

            tar xCf /install /install/app.tar.gz

            /install/app/deploy.sh

            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource PASOEGroup --region ${AWS::Region}

            #            [ $(qs_status) == 0 ] && cfn_success || cfn_fail

          - PASOEDeployPackage: !Ref PASOEDeployPackage
  PASOEScaleUpPolicy:
    Type: 'AWS::AutoScaling::ScalingPolicy'
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref PASOEGroup
      Cooldown: '60'
      ScalingAdjustment: 1
  PASOEScaleDownPolicy:
    Type: 'AWS::AutoScaling::ScalingPolicy'
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref PASOEGroup
      Cooldown: '60'
      ScalingAdjustment: -1
  WebServerCPUAlarmHigh:
    Type: 'AWS::CloudWatch::Alarm'
    Properties:
      AlarmDescription: Scale-up if CPU > 90% for 10 minutes
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      Statistic: Average
      Period: 300
      EvaluationPeriods: 2
      Threshold: 90
      AlarmActions:
        - !Ref PASOEScaleUpPolicy
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref PASOEGroup
      ComparisonOperator: GreaterThanThreshold
  WebServerCPUAlarmLow:
    Type: 'AWS::CloudWatch::Alarm'
    Properties:
      AlarmDescription: Scale-down if CPU < 70% for 10 minutes
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      Statistic: Average
      Period: 300
      EvaluationPeriods: 2
      Threshold: 70
      AlarmActions:
        - !Ref PASOEScaleDownPolicy
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref PASOEGroup
      ComparisonOperator: LessThanThreshold
  ApplicationLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Subnets:
        - !Ref PublicSubnet1ID
        - !Ref PublicSubnet2ID
      SecurityGroups:
        - !Ref ELBPASOESecurityGroup
      Tags:
        - Key: name
          Value:  WebServer ASG Instance
  PASOEListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref PASOETargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
  PASOETargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      Port: 8810
      Protocol: HTTP
      UnhealthyThresholdCount: 5
      VpcId: !Ref VPCID
  PASOESecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable access to the PASOE EC2 Instance
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: 8810
          ToPort: 8810
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: 8811
          ToPort: 8811
          CidrIp: '0.0.0.0/0'
      VpcId: !Ref VPCID
  ELBPASOESecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP to the load balancer
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref WebAccessCIDR
      VpcId: !Ref VPCID
Outputs:
  URL:
    Description: The URL of PASOE
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt 
          - ApplicationLoadBalancer
          - DNSName
