templates/webserver.template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
   WebServer, NGINX in ASG behind ALB, License:
Parameters:
  WebDeployPackage:
    Description: URL to package to deploy Web UI into WebServer EC2 instances
    Type: String
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t3a.medium
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
      - t3a.small
      - t3a.medium
      - m4.large
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
      - r4.large
      - r4.xlarge
      - r4.2xlarge
      - r4.4xlarge
      - r4.8xlarge
    ConstraintDescription: must be a valid EC2 instance type.
  EmailAddress:
    Description: Email Address for notification
    Type: String
    AllowedPattern: >-
      ([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)
    ConstraintDescription: Must be a valid email id.
  KeyPairName:
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: Name of an existing EC2 KeyPair.
  WebAccessCIDR:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
    Description: Allowed CIDR block for webserver access
    Type: String
  PrivateSubnet1ID:
    Description: Private Subnet Id 1
    Type: 'AWS::EC2::Subnet::Id'
  PrivateSubnet2ID:
    Description: Private Subnet Id 2
    Type: 'AWS::EC2::Subnet::Id'
  PublicSubnet1ID:
    Description: Public Subnet Id 1
    Type: 'AWS::EC2::Subnet::Id'
  PublicSubnet2ID:
    Description: Public Subnet Id 2
    Type: 'AWS::EC2::Subnet::Id'
  VPCID:
    Description: 'ID of the VPC (e.g., vpc-0343606e)'
    Type: 'AWS::EC2::VPC::Id'
  PASOEURL:
    Description: URL to ELB to access PASOE
    Type: String    
Mappings:
  AWSAMIRegionMap:
    AMI:
      AmazonLinux2AMI: Amazon Linux 2 AMI
    af-south-1:
      AmazonLinux2AMI: ami-0ec47ddb564d75b64
    ap-east-1:
      AmazonLinux2AMI: ami-49bbfa38
    ap-northeast-1:
      AmazonLinux2AMI: ami-0a1c2ec61571737db
    ap-northeast-2:
      AmazonLinux2AMI: ami-01af223aa7f274198
    ap-northeast-3:
      AmazonLinux2AMI: ami-053e733f02a27d9fc
    ap-south-1:
      AmazonLinux2AMI: ami-0447a12f28fddb066
    ap-southeast-1:
      AmazonLinux2AMI: ami-0615132a0f36d24f4
    ap-southeast-2:
      AmazonLinux2AMI: ami-088ff0e3bde7b3fdf
    ca-central-1:
      AmazonLinux2AMI: ami-0f75c2980c6a5851d
    eu-central-1:
      AmazonLinux2AMI: ami-0a02ee601d742e89f
    eu-north-1:
      AmazonLinux2AMI: ami-04697c9bb5d6135a2
    eu-south-1:
      AmazonLinux2AMI: ami-0f9b9a8cf93d838d0
    eu-west-1:
      AmazonLinux2AMI: ami-0ea3405d2d2522162
    eu-west-2:
      AmazonLinux2AMI: ami-032598fcc7e9d1c7a
    eu-west-3:
      AmazonLinux2AMI: ami-01c72e187b357583b
    me-south-1:
      AmazonLinux2AMI: ami-01b31491b74045c0c
    sa-east-1:
      AmazonLinux2AMI: ami-0477a95397a9154b3
    us-east-1:
      AmazonLinux2AMI: ami-09d95fab7fff3776c
    us-east-2:
      AmazonLinux2AMI: ami-026dea5602e368e96
    us-west-1:
      AmazonLinux2AMI: ami-04e59c05167ea7bd5
    us-west-2:
      AmazonLinux2AMI: ami-0e34e7b9ca0ace12d
Resources:
  NotificationTopic:
    Type: 'AWS::SNS::Topic'
    Properties:
      Subscription:
        - Endpoint: !Ref EmailAddress
          Protocol: email
  WebServerGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      VPCZoneIdentifier:
        - !Ref PrivateSubnet1ID
        - !Ref PrivateSubnet2ID
      LaunchConfigurationName: !Ref WebServerLaunchConfig
      MinSize: '2'
      MaxSize: '8'
      TargetGroupARNs:
        - !Ref ALBTargetGroup
      NotificationConfigurations:
      - TopicARN: !Ref NotificationTopic
        NotificationTypes:
          - autoscaling:EC2_INSTANCE_LAUNCH
          - autoscaling:EC2_INSTANCE_LAUNCH_ERROR
          - autoscaling:EC2_INSTANCE_TERMINATE
          - autoscaling:EC2_INSTANCE_TERMINATE_ERROR
      Tags:
        - Key: Name
          Value: webserver
          PropagateAtLaunch: true
    CreationPolicy:
      ResourceSignal:
        Timeout: PT15M
        Count: '1'
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MinInstancesInService: 1
        MaxBatchSize: 1
        PauseTime: PT15M
        WaitOnResourceSignals: true
  WebServerLaunchConfig:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
#    Metadata:
#      'AWS::CloudFormation::Init':
#        configSets:
#          webserver_install:
#            - config-webserver
#            - run_service-webserver
#        config-webserver:
#          packages:
#            yum:
#              nginx: []
#        run_service-webserver:
#          commands:
#            start_weberver:
#              command: /etc/init.d/nginx start
    Properties:
      KeyName: !Ref KeyPairName
#      ImageId: ami-09d95fab7fff3776c
      ImageId: !FindInMap 
        - AWSAMIRegionMap
        - !Ref 'AWS::Region'
        - AmazonLinux2AMI
      InstanceType: !Ref InstanceType
      SecurityGroups:
        - !Ref WebServerSecurityGroup
      UserData: !Base64 
        'Fn::Sub':
          - >
            #!/bin/bash -x

            #cfn-init -v --stack ${AWS::StackName} --resource
            #WebServerLaunchConfig --configsets webserver_install
            #--region ${AWS::Region} || cfn_fail

            amazon-linux-extras install nginx1 -y

            systemctl enable nginx 

            systemctl start nginx 

            mkdir -p /var/www/

            ln -s /usr/share/nginx/html/ /var/www/html

            # Install WebUI

            mkdir -p /install

            wget -O /install/app.tar.gz ${WebDeployPackage}

            OE_ENV=webserver

            PASOEURL=${PASOEURL}

            export OE_ENV PASOEURL

            tar xCf /install /install/app.tar.gz

            /install/app/deploy.sh

            # Signal cfn-init (final check)

            # /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource WebServerLaunchConfig --configsets webserver_install --region ${AWS::Region}

            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}

            #[ $(qs_status) == 0 ] && cfn_success || cfn_fail
          - WebDeployPackage: !Ref WebDeployPackage
  WebServerScaleUpPolicy:
    Type: 'AWS::AutoScaling::ScalingPolicy'
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref WebServerGroup
      Cooldown: '60'
      ScalingAdjustment: 1
  WebServerScaleDownPolicy:
    Type: 'AWS::AutoScaling::ScalingPolicy'
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref WebServerGroup
      Cooldown: '60'
      ScalingAdjustment: -1
  WebServerCPUAlarmHigh:
    Type: 'AWS::CloudWatch::Alarm'
    Properties:
      AlarmDescription: Scale-up if CPU > 90% for 10 minutes
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      Statistic: Average
      Period: 300
      EvaluationPeriods: 2
      Threshold: 90
      AlarmActions:
        - !Ref WebServerScaleUpPolicy
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref WebServerGroup
      ComparisonOperator: GreaterThanThreshold
  WebServerCPUAlarmLow:
    Type: 'AWS::CloudWatch::Alarm'
    Properties:
      AlarmDescription: Scale-down if CPU < 70% for 10 minutes
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      Statistic: Average
      Period: 300
      EvaluationPeriods: 2
      Threshold: 70
      AlarmActions:
        - !Ref WebServerScaleDownPolicy
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref WebServerGroup
      ComparisonOperator: LessThanThreshold
  ApplicationLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Subnets:
        - !Ref PublicSubnet1ID
        - !Ref PublicSubnet2ID
      SecurityGroups:
        - !Ref ELBWebServerSecurityGroup
      Tags:
        - Key: name
          Value:  WebServer ASG Instance
  ALBListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
  ALBTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 5
      VpcId: !Ref VPCID
  WebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable access to the WebServer EC2 Instance
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
      VpcId: !Ref VPCID
  ELBWebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP to the load balancer 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref WebAccessCIDR
      VpcId: !Ref VPCID
Outputs:
  URL:
    Description: The URL of WebServer
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt 
          - ApplicationLoadBalancer
          - DNSName
